chore: ajustes de estilo